<resources>
    <string name="app_name">CrazyDaily</string>
    <string name="appbar_behavior">com.crazysunj.crazydaily.view.behavior.AppBarLayoutOverScrollViewBehavior</string>
    <string name="bottom_behavior">com.crazysunj.crazydaily.view.behavior.ShowHideBottomBehavior</string>
    <string name="text_about_me">关于我</string>
    <string name="page_name_conatct">超牛批联系人</string>
    <string name="text_conatct">联系人</string>
    <string name="text_live">直播</string>
    <string name="text_music">音乐</string>
    <string name="text_more">更多</string>
    <string name="about_me_des">一款程序员日常放松的App，基于Material Design + MVP-Clean + RxJava2 + Retrofit + Dagger2 + Glide + Okhttp + MTRVA + BRVAH + 炫酷控件 + 炫酷动画\n包含：\n\t知乎日报\n\t干货集中营\n\t天气\n\t搞笑视频\n\t好友列表</string>
    <string name="about_me_github">作者Github：</string>
    <string name="about_me_blog">作者博客：</string>
    <string name="about_me_feel">本项目涵盖了开发中应该用到的开源框架、自定义控件、自定义动画、项目架构搭建。有意见或者建议的同学可以联系我哦，持续更新，祝你生活愉快！喜欢的朋友点个star关注一下我吧！（上面链接长按复制）</string>
    <string name="about_me_github_text">https://github.com/crazysunj/</string>
    <string name="about_me_blog_text">http://crazysunj.com/</string>
    <string name="ic_go">&#xe604;</string>
    <string name="ic_location">&#xe64e;</string>
    <string name="ic_delete">&#xe600;</string>
    <string name="ic_call">&#xe605;</string>
    <string name="ic_msg">&#xe643;</string>
    <string name="ic_arrow">&#xe615;</string>
    <string name="search_contact">搜索联系人</string>
    <string name="ic_edit">&#xe6af;</string>
    <string name="ic_video">&#xe64f;</string>
    <string name="ic_add">&#xe620;</string>
    <string name="transition_photo">photo</string>
    <string name="transition_head">head</string>
    <string name="transition_name">name</string>
    <string name="transition_location_icon">location_icon</string>
    <string name="transition_location">location</string>
    <string name="splash_bottom_text">什么都略懂一点，生活更多彩一些</string>
    <string name="clear_cache">清除缓存</string>
    <string name="handle_img">处理本地图片</string>
    <string name="permission_storage_rationale">该操作需要读写存储卡权限</string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="permission_storage_denied">读取存储权限被拒绝</string>
    <string name="permission_storage_neverask">请到设置页面去允许存储权限</string>
    <string name="bottom_line">我是有底线的</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="file_provider_authorities">com.crazysunj.crazydaily.provider</string>
</resources>
