<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_contact"
        android:icon="@mipmap/ic_contact"
        android:title="@string/text_conatct" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@mipmap/ic_live"
        android:title="@string/text_live" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@mipmap/ic_music"
        android:title="@string/text_music" />

    <item
        android:id="@+id/navigation_about_me"
        android:icon="@mipmap/ic_about_me"
        android:title="@string/text_about_me" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@mipmap/ic_more"
        android:title="@string/text_more" />

</menu>