<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_15"
    tools:context="com.crazysunj.crazydaily.ui.AboutMeActivity">

    <TextView
        style="@style/text_16_333333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me_des" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:orientation="horizontal">

        <TextView
            style="@style/text_16_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me_github" />

        <TextView
            android:id="@+id/about_me_github"
            style="@style/text_16_333333"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me_github_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:orientation="horizontal">

        <TextView
            style="@style/text_16_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me_blog" />

        <TextView
            android:id="@+id/about_me_blog"
            style="@style/text_16_333333"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me_blog_text" />
    </LinearLayout>


    <TextView
        style="@style/text_16_333333"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/about_me_feel" />

    <TextView
        android:id="@+id/about_me_clear_cache"
        style="@style/text_16_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/shape_button"
        android:gravity="center"
        android:padding="@dimen/space_10"
        android:text="@string/clear_cache" />

</LinearLayout>
