<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contact.ContactDetailActivity">

    <com.crazysunj.crazydaily.view.contact.CoolBGView
        android:id="@+id/cool_bg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ic_head"
        android:layout_width="@dimen/space_120"
        android:layout_height="@dimen/space_120"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_huaji"
        android:transitionName="@string/transition_head"
        app:civ_border_color="@color/color_white"
        app:civ_border_width="@dimen/space_10" />

    <TextView
        android:id="@+id/tx_name"
        style="@style/text_16_333333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_10"
        android:transitionName="@string/transition_name"
        tools:text="姓名" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tx_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/space_6"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ic_location"
            style="@style/text_16_color_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crazydailyicon"
            android:text="@string/ic_location"
            android:transitionName="@string/transition_location_icon" />

        <TextView
            android:id="@+id/tx_location"
            style="@style/text_16_color_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3"
            android:transitionName="@string/transition_location"
            tools:text="地址" />
    </LinearLayout>


    <com.crazysunj.crazydaily.view.contact.SatelliteMenuView
        android:transitionName="edit"
        android:id="@+id/satellite_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_20" />
</RelativeLayout>