<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/msg"
            style="@style/text_20_white"
            android:layout_width="@dimen/space_80"
            android:layout_height="match_parent"
            android:background="@color/color_FCAF17"
            android:fontFamily="@font/crazydailyicon"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/ic_msg" />

        <TextView
            android:id="@+id/call"
            style="@style/text_20_white"
            android:layout_width="@dimen/space_80"
            android:layout_height="match_parent"
            android:background="@color/color_45B97C"
            android:fontFamily="@font/crazydailyicon"
            android:gravity="center"
            android:text="@string/ic_call" />

        <TextView
            android:id="@+id/delete"
            style="@style/text_20_white"
            android:layout_width="@dimen/space_80"
            android:layout_height="match_parent"
            android:background="@color/color_FF4444"
            android:fontFamily="@font/crazydailyicon"
            android:gravity="center"
            android:text="@string/ic_delete" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_D1EFFB">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_head"
            android:layout_width="@dimen/space_60"
            android:layout_height="@dimen/space_60"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_15"
            android:layout_marginStart="@dimen/space_25"
            android:layout_marginTop="@dimen/space_10"
            android:scaleType="centerCrop"
            app:civ_border_color="@color/color_white"
            app:civ_border_width="@dimen/space_2" />

        <TextView
            android:id="@+id/tx_name"
            style="@style/text_16_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ic_head"
            android:layout_marginTop="@dimen/space_6"
            android:layout_toEndOf="@id/ic_head"
            tools:text="姓名" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ic_head"
            android:layout_alignStart="@id/tx_name"
            android:layout_below="@id/tx_name"
            android:layout_marginBottom="@dimen/space_6"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ic_location"
                style="@style/text_12_999999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crazydailyicon"
                android:text="@string/ic_location" />

            <TextView
                android:id="@+id/tx_location"
                style="@style/text_12_999999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_3"
                tools:text="地址" />
        </LinearLayout>

        <TextView
            style="@style/text_12_666666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/space_15"
            android:fontFamily="@font/crazydailyicon"
            android:text="@string/ic_go" />

        <View
            android:id="@+id/bottom_line"
            style="@style/horizontal_line"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@id/ic_head" />
    </RelativeLayout>

</FrameLayout>